Add questions search filters
